--- a/SupportVectorMachines/SupportVectorMachinesR.Rmd
+++ b/SupportVectorMachines/SupportVectorMachinesR.Rmd
@@ -11,162 +11,100 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 ```{r}
-install.packages("nycflights13")
-install.packages("e1071")
-install.packages("dplyr")  # For data manipulation
+
+# Load libraries
 library(nycflights13)
 library(e1071)
 library(dplyr)
-
-```
-
-```{r}
-install.packages("ggplot2")
+library(caret)
 library(ggplot2)
+
+
 ```
 
-
 ```{r}
+# Load the data from 'flights'
 data("flights")
 df <- flights  # Store in a variable
-head(df)  # View first few rows
 
-```
+# View first few rows
+head(df)
 
-```{r}
-# Select numeric columns
-numeric_columns <- flights[, sapply(flights, is.numeric)]
-
-# Remove columns with zero variance (standard deviation = 0)
-numeric_columns <- numeric_columns[, sapply(numeric_columns, function(x) sd(x, na.rm = TRUE) > 0)]
-
-# Remove rows with missing values in 'dep_delay' and other numeric columns
-valid_data <- flights[!is.na(flights$dep_delay) & complete.cases(numeric_columns), ]
-
-# Compute the correlation between 'dep_delay' and the other numeric columns
-cor_with_target <- cor(valid_data[, sapply(valid_data, is.numeric)], valid_data$dep_delay, use = "complete.obs")
-
-# Check the structure of the correlation result
-print(cor_with_target)
 
 ```
 
 
-
-
 ```{r}
+# Prepare data by mutating the 'delayed' column based on dep_delay
 df <- df %>%
   mutate(delayed = ifelse(dep_delay > 15, "Yes", "No")) %>%
-  select(dep_time, arr_time, air_time, distance, dep_delay, arr_delay, delayed) %>%
+  select(year, month, day, dep_time, sched_dep_time, sched_arr_time, carrier, origin, dest, hour, minute, time_hour, arr_time, air_time, distance, dep_delay, arr_delay, delayed) %>%
   na.omit()  # Remove missing values
 
-```
-
-
-
-```{r}
+# Convert 'delayed' to a factor
 df$delayed <- as.factor(df$delayed)
-```
+
+# Convert 'carrier', 'origin', and 'dest' to factors
+df$carrier <- as.factor(df$carrier)
+df$origin <- as.factor(df$origin)
+df$dest <- as.factor(df$dest)
 
 
-```{r}
-set.seed(123)  # For reproducibility
-train_index <- sample(1:nrow(df), 0.7 * nrow(df))  # 70% training data
-train_data <- df[train_index, ]
-test_data <- df[-train_index, ]
-```
-
-
-```{r}
-head(train_data)  # View first few rows
 ```
 
 ```{r}
-# Load necessary library
-library(ggplot2)
-
-# Assuming 'df' is your full dataset
-
-# Create a scatter plot to compare dep_delay and dep_time
-ggplot(df, aes(x = dep_time, y = dep_delay)) +
-  geom_point(alpha = 0.1, color = "blue") +  # alpha for transparency
-  labs(title = "Comparison of Departure Time vs Departure Delay",
-       x = "Departure Time (minutes)",
-       y = "Departure Delay (minutes)") +
-  theme_minimal()
-
-
+df
 ```
 
 
 
 
 ```{r}
-ggplot(df, aes(x = distance, y = dep_delay)) +
-  geom_point(alpha = 0.1, color = "blue") +  # alpha for transparency
-  labs(title = "Comparison of Distance vs Departure Delay",
-       x = "Distance (miles)",
-       y = "Departure Delay (minutes)") +
-  theme_minimal()
-```
+# Set seed for reproducibility
+set.seed(123)
 
+# Split the data into training and testing sets (80% training, 20% testing)
+trainIndex <- createDataPartition(df$delayed, p = 0.8, list = FALSE)
+trainData <- df[trainIndex, ]
+testData <- df[-trainIndex, ]
 
-```{r}
-head(test_data)
-```
+# Build the SVM model (linear kernel)
+svm_model <- svm(delayed ~ month + day + dep_time + sched_dep_time + sched_arr_time +
+                   carrier + origin + dest + air_time + distance, 
+                 data = trainData, kernel = "linear")
 
+# View the model summary
+summary(svm_model)
 
-```{r}
-svm_model <- svm(delayed ~ ., data = train_data, kernel = "radial")
-```
+# Make predictions on the test data
+predictions <- predict(svm_model, testData)
 
+# Evaluate the model's performance
+confusionMatrix(predictions, testData$delayed)
 
-```{r}
-predictions <- predict(svm_model, test_data)
-table(predictions, test_data$delayed)  # Confusion matrix
-```
-```{r}
-install.packages("caret")
 ```
 
 ```{r}
-library(caret)
-```
+# Create a confusion matrix
+cm <- confusionMatrix(predictions, testData$delayed)
 
+# Print confusion matrix
+print(cm)
 
-```{r}
-
-# Create the confusion matrix
-cm <- confusionMatrix(predictions, test_data$delayed)
-
-# Convert confusion matrix to a data frame for ggplot
-cm_table <- as.table(cm)
+# Convert confusion matrix to a data frame for visualization
+cm_table <- as.table(cm$table)  # Extract confusion matrix table
 cm_df <- as.data.frame(cm_table)
-colnames(cm_df) <- c("Predicted", "Actual", "Count")
+colnames(cm_df) <- c("Actual", "Predicted", "Count")
 
-# Plot the confusion matrix as a heatmap
+# Plot confusion matrix as a heatmap
 ggplot(cm_df, aes(x = Actual, y = Predicted, fill = Count)) +
   geom_tile() +
   scale_fill_gradient(low = "white", high = "blue") +
   geom_text(aes(label = Count), color = "black") +
   theme_minimal() +
   labs(title = "Confusion Matrix Heatmap", x = "Actual", y = "Predicted")
+
 ```
-
-
-```{r}
-accuracy <- sum(predictions == test_data$delayed) / nrow(test_data)
-print(paste("Accuracy:", round(accuracy * 100, 2), "%"))
-```
-
-
-
-
-
-
-
-
-
 
 
 
